--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "grub" ]
+    branches: [ "530" ]
   pull_request:
-    branches: [ "grub" ]
+    branches: [ "530" ]
 
 jobs:
   build:
@@ -36,12 +36,12 @@ jobs:
       run: |
         cd /home/runner/work/EDK2WorkDir/edk2 
         . /home/runner/work/EDK2WorkDir/edk2/edksetup.sh 
-        GCC5_ARM_PREFIX=arm-linux-gnueabihf- build -a ARM -p Lumia435Pkg/Lumia435.dsc -t GCC5 -j$(nproc) -s -n 0
+        GCC5_ARM_PREFIX=arm-linux-gnueabihf- build -a ARM -p Lumia530Pkg/Lumia530.dsc -t GCC5 -j$(nproc) -s -n 0
         
     - name: Create ELF binary
       run: |
-        cd /home/runner/work/EDK2WorkDir/edk2/Build/Lumia435-ARM/DEBUG_GCC5/FV 
-        arm-linux-gnueabihf-objcopy -I binary -O elf32-littlearm --binary-architecture arm MSM8610_EFI.fd MSM8610_EFI.fd.elf && arm-linux-gnueabihf-ld MSM8610_EFI.fd.elf -T ../../../../Lumia435Pkg/FvWrapper.ld -o ../../../../../emmc_appsboot.mbn
+        cd /home/runner/work/EDK2WorkDir/edk2/Build/Lumia530-ARM/DEBUG_GCC5/FV 
+        arm-linux-gnueabihf-objcopy -I binary -O elf32-littlearm --binary-architecture arm MSM8612_EFI.fd MSM8612_EFI.fd.elf && arm-linux-gnueabihf-ld MSM8612_EFI.fd.elf -T ../../../../Lumia530Pkg/FvWrapper.ld -o ../../../../../emmc_appsboot.mbn
       
     - uses: actions/upload-artifact@v3
       with:
