--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Update APT
       run: sudo apt update
       
@@ -43,7 +43,7 @@ jobs:
         cd /home/runner/work/EDK2WorkDir/edk2/Build/Lumia530-ARM/DEBUG_GCC5/FV 
         arm-linux-gnueabihf-objcopy -I binary -O elf32-littlearm --binary-architecture arm MSM8612_EFI.fd MSM8612_EFI.fd.elf && arm-linux-gnueabihf-ld MSM8612_EFI.fd.elf -T ../../../../Lumia530Pkg/FvWrapper.ld -o ../../../../../emmc_appsboot.mbn
       
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
-       name: emmc_appsboot.mbn
+       name: Lumia 530
        path: /home/runner/work/EDK2WorkDir/emmc_appsboot.mbn
