--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -1,4 +1,4 @@
-name: build (DEBUG)
+name: build (RELEASE)
 
 on:
   push:
@@ -36,11 +36,11 @@ jobs:
       run: |
         cd /home/runner/work/EDK2WorkDir/edk2 
         . /home/runner/work/EDK2WorkDir/edk2/edksetup.sh 
-        GCC5_ARM_PREFIX=arm-linux-gnueabihf- build -a ARM -p Lumia530Pkg/Lumia530.dsc -t GCC5 -j$(nproc) -s -n 0
+        GCC5_ARM_PREFIX=arm-linux-gnueabihf- build -a ARM -p Lumia530Pkg/Lumia530.dsc -t GCC5 -j$(nproc) -s -n 0 -b RELEASE
         
     - name: Create ELF binary
       run: |
-        cd /home/runner/work/EDK2WorkDir/edk2/Build/Lumia530-ARM/DEBUG_GCC5/FV 
+        cd /home/runner/work/EDK2WorkDir/edk2/Build/Lumia530-ARM/RELEASE_GCC5/FV 
         arm-linux-gnueabihf-objcopy -I binary -O elf32-littlearm --binary-architecture arm MSM8612_EFI.fd MSM8612_EFI.fd.elf && arm-linux-gnueabihf-ld MSM8612_EFI.fd.elf -T ../../../../Lumia530Pkg/FvWrapper.ld -o ../../../../../emmc_appsboot.mbn
       
     - uses: actions/upload-artifact@v4
